All sorting done, manual sorting to assure api sorting is correct is done

--- a/app/views/database/_searchform.html.erb
+++ b/app/views/database/_searchform.html.erb
@@ -21,14 +21,14 @@
 
 	<div class="row">
 		<div class="col-lg-8">
-			<h5>Sort by:
-				<p>price
+			<h5><strong>Sort by:<strong>
+				<h6>Price
 				<%= radio_button_tag 'sort', "PRICE", false %>
-				rating
+				Rating
 				<%= radio_button_tag 'sort', "QUALITY", false %>
-				distance
+				Distance
 				<%= radio_button_tag 'sort', "PROXIMITY", true %>
-			</p>
+			<h6>
 			</h5>
 		</div>
 
