--- a/app/views/database/getList.html.erb
+++ b/app/views/database/getList.html.erb
@@ -80,6 +80,6 @@
 
     </div>
     <div style="margin-left: 480px;" class="btn-toolbar" role="toolbar" aria-label="...">
-        <button class="btn-group btn btn-info" type="button">Prev</button>
-        <button class="btn-group btn btn-info" type="button">Next</button>
+        <button class="btn-group btn btn-inverse" type="button">Prev</button>
+        <button class="btn-group btn btn-inverse" type="button">Next</button>
     </div>
