--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
           <div class="row">
               <div class="col-sm-6 col-md-4">
                   <div class="thumbnail">
-                      <img width=300 height=300 src="http://www.rocsgrp.com/wp-content/gallery/aritson-rome/lobby-ariston-hotel-rome-002-300x300.jpg" alt="Picture of hotel">
+                      <img width=300 height=300 src="http://www.swansoninteriors.com/blog/wp-content/uploads/2012/12/Mission3.jpg" alt="">
                       <div class="caption">
                           <h3>Hotel name</h3>
                           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
