The sorting requirement is now implemented. Users can sort by price, rating, or distance

--- a/app/views/database/getList.html.erb
+++ b/app/views/database/getList.html.erb
@@ -6,6 +6,21 @@
         <div class="row">
             <div class="col-lg-8">
                 <h1>Search Results</h1>
+
+                <h5>Sort by:
+                  <div style="display:inline-block;">
+                    <%= button_to 'Price', :controller => 'database', :action => 'getList', :method => 'post',
+                    :params => {:sort => 'PRICE',:city=> @city, :state => @stateProvinceCode,:name=>@propertyName, :poi=>@destinationString,:departure=>$departureDate,:start_date=>$arrivalDate, :starRange => @starRange, :priceRange => @priceRange } , class:"btn btn-primary" %>
+                  </div>
+                  <div style="display:inline-block;">
+                    <%= button_to 'Rating', :controller => 'database', :action => 'getList', :method => 'post',
+                    :params => {:sort => 'QUALITY',:city=> @city, :state => @stateProvinceCode,:name=>@propertyName, :poi=>@destinationString,:departure=>$departureDate,:start_date=>$arrivalDate, :starRange => @starRange, :priceRange => @priceRange } , class:"btn btn-primary" %>
+                  </div>
+                  <div style="display:inline-block;">
+                    <%= button_to 'Distance', :controller => 'database', :action => 'getList', :method => 'post',
+                    :params => {:sort => 'PROXIMITY',:city=> @city, :state => @stateProvinceCode,:name=>@propertyName, :poi=>@destinationString,:departure=>$departureDate,:start_date=>$arrivalDate, :starRange => @starRange, :priceRange => @priceRange } , class:"btn btn-primary" %>
+                  </div>
+                </h5>
             </div>
         </div>
 </head>
