--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -5,6 +5,13 @@
  */
 
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+.highlight {
+    padding: 9px 14px;
+    margin-bottom: 14px;
+    background-color: #EAEAEA;
+    border: 2px solid #7D9EC0;
+    border-radius: 4px;
+}
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
