--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -35,48 +35,54 @@
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
     <%= javascript_include_tag "application" %>
-  </head>
-  <body>
+</head>
+<body>
 
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Hotel Homie</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-			  <% if user_signed_in? %>
-			  <li><% "Currently signed in." %></li>
-			  <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
-			  <li><%= link_to "My Profile", welcome_user_profile_path  %></li>
-			  <li><%= link_to "Make a Reservation", root_url  %></li>
-			  <% else %>
-              <li><%= link_to "Login", new_user_session_path  %></li>
-              <li><%= link_to "Register", new_user_registration_path  %></li>
-              <li><%= link_to "Make a Reservation", root_url  %></li>
-			  <% end %>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <%= link_to "Hotel Homie", root_url, class: 'navbar-brand' %>
+            <div class="navbar-collapse collapse navbar-responsive-collapse">
+                <ul class="nav navbar-nav">
+                    <% if user_signed_in? %>
+                    <li><% "Currently signed in." %></li>
+                    <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+                    <li><%= link_to "My Profile", welcome_user_profile_path  %></li>
+                    <li><%= link_to "Make a Reservation", root_url  %></li>
+                    <% else %>
+                    <li><%= link_to "Login", new_user_session_path  %></li>
+                    <li><%= link_to "Register", new_user_registration_path  %></li>
+                    <li><%= link_to "Make a Reservation", root_url  %></li>
+                    <% end %>
 
-          </ul>
+                </ul>
+            </div>
         </div>
-      </div>
+    </div>
+    <div style="">
+        <img src="/assets/banner.png" width=100% height=140 margin=0>
     </div>
 
     <div class="container">
-      <div class="row">
-        <div class="col-lg-9">
-          <%= bootstrap_flash %>
-          <%= yield %>
-        </div>
-      </div><!--/row-->
+        <div class="row">
+            <div class="col-lg-9">
+                <%= bootstrap_flash %>
+                <%= yield %>
+            </div>
+        </div><!--/row-->
+    </div>
+    <!--/ The template for hotels near you etc -->
 
-      <footer>
-        <p>&copy; Hotel Homie 2014</p>
-      </footer>
+        <hr/>
+        <footer class="footer">
+            <p>&copy; Hotel Homie 2014</p>
+        </footer>
 
     </div> <!-- /container -->
 
-  </body>
+</body>
 </html>
