fixed reservation delete functionality

--- a/ucr_hbs/app/views/reservations/modifyreservation.html.erb
+++ b/ucr_hbs/app/views/reservations/modifyreservation.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag :controller => 'reservations', :action => 'update', :method => 'post' do %>
+
 
 <div class="panel panel-default">
   <!-- Default panel contents -->
@@ -13,18 +13,20 @@
             </tr>
         </thead>
         <tbody>
-        	<!-- Loop through here to fill table -->
 			<% @reservation = current_user.reservations.find(params[:id]) %>
+			<%= form_tag :controller => 'reservations', :action => 'update', :method => 'post' do %>
+        	<!-- Loop through here to fill table -->
+			
 			<%= hidden_field_tag :id, params[:id] %>
 			<tr>
                 <td><%= raw @reservation.hotel_name %></td>
                 <td><%= select_date @reservation.arrival_date, prefix: :arrival_date, min: Date.today %></td>
                 <td><%= select_date @reservation.departure_date, prefix: :departure_date, min: Date.today+1 %></td>
 				<td><%= submit_tag("Update", :class => 'btn btn-xs btn-primary') %><td>
-				<td><%= button_to "Cancel", {:controller => :reservations, :action => 'delete', :id => @reservation.id }, :method => 'post', :class => 'btn btn-xs btn-primary' %></td>
+				<% end %>
+				<td><%= button_to "Cancel", {:controller => 'reservations', :action => 'delete', :id => @reservation.id}, :method => 'post', :class => 'btn btn-xs btn-primary' %></td>
 			</tr>
         </tbody>
   </table>
 </div>
 
-<% end %>
