--- a/app/views/database/hotelInfo.html.erb
+++ b/app/views/database/hotelInfo.html.erb
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
   <link
   rel="stylesheet"
   href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"
@@ -123,7 +113,7 @@
         <hr>
 
         <!-- maps -->
-        <div id="map" style="width: 400px; height: 400px"></div>
+        <div id="map" style="width: 750px; height: 400px"></div>
 
         <script
         src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">
@@ -189,10 +179,10 @@
 
     </div>
     <!-- /.row -->
+  </div>
 
-    <hr>
+</div>
 
   </body>
 
   </html>
-  
