--- a/app/views/reservations/payment.html.erb
+++ b/app/views/reservations/payment.html.erb
@@ -4,13 +4,15 @@
 
 <h1>Payment for your Reservation</h1>
 
-<%= form_tag :controller => 'reservations', :action => 'validate_credit_card', :method => 'post' do %> 
+<%= form_tag :controller => 'reservations', :action => 'validate_credit_card', :method => 'post' do %>
 <div class="jumbotron">
 
 <%= render file: ($cc_default == true ? '/reservations/_defaultcreditcard' : '/reservations/_creditcard') %>
 
 <% end %>
-<%= button_to 'Use Default Information', :controller => "reservations", :action => "fill_default_info" %>
+
+<% if current_user.payment_info.blank? == false %>
+  <%= button_to 'Use Default Information', :controller => "reservations", :action => "fill_default_info" %>
+<% end %>
 
 </div>
-
